Add the parsing for the section URLs

--- a/index.htm.erb
+++ b/index.htm.erb
@@ -1,1 +1,5 @@
-<%= styleguide %>
+<% styleguide.each do |section_name, section| %>
+  <p>
+    <a href="/<%= section_name %>"><%= section_name %></a>
+  </p>
+<% end %>
