--- a/section.htm.erb
+++ b/section.htm.erb
@@ -1,5 +1,11 @@
-<% if(template = section[:template])
+<% 
+require 'json'
+if(template = section[:template])
+  data = {}
+  if(json = section[:data])
+    data = JSON.parse(json)
+  end
   tilt_template = Tilt.new(template.gsub(/\s*/, ''))
-  output = tilt_template.render
+  output = tilt_template.render(Object.new, data)
 end %>
 <%= output %>
